--- a/scss/theme/_netmatters.scss
+++ b/scss/theme/_netmatters.scss
@@ -57,12 +57,18 @@ $social-media-icons: (
     "linkedin": "linked-in",
 );
 
-//TODO: this is being used by latest-posts too, rename (and use for all similar wraps)
-$footer-width-by-breakpoints: (
+$content-width-by-breakpoints: (
     "mobile": 100%,
     "small": convert.px-to-rem(750px),
     "medium": convert.px-to-rem(970px),
     "large": convert.px-to-rem(1200px),
+);
+
+//TODO: very similar to $content-width-by-breakpoints, so use that instead
+$badge-row-container-width-by-breakpoints: (
+    "small": convert.px-to-rem(720px),
+    "medium": convert.px-to-rem(940px),
+    "large": convert.px-to-rem(1170px),
 );
 
 $footer-section-width-by-breakpoints: (
@@ -76,12 +82,6 @@ $badge-row-height-by-breakpoints: (
     "small": convert.px-to-rem(88px),
     "medium": convert.px-to-rem(110px),
     "large": convert.px-to-rem(88px),
-);
-
-$badge-row-container-width-by-breakpoints: (
-    "small": convert.px-to-rem(720px),
-    "medium": convert.px-to-rem(940px),
-    "large": convert.px-to-rem(1170px),
 );
 
 $latest-post-article-width-by-breakpoints: (
