--- a/scss/theme/_netmatters.scss
+++ b/scss/theme/_netmatters.scss
@@ -109,6 +109,11 @@ $about-heading-size: convert.px-to-rem(36px);
 $about-para-size: convert.px-to-rem(16px);
 $about-button-size: convert.px-to-rem(16px);
 
+$services-heading-size: convert.px-to-rem(18px);
+$services-para-size: convert.px-to-rem(13px);
+$services-button-size: convert.px-to-rem(17px);
+
+
 $blog-h2-font-size: convert.px-to-rem(20px);
 $blog-h3-font-size: convert.px-to-rem(16px);
 $blog-para-font-size: convert.px-to-rem(13px);
