unify responsive content wrapper widths

--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -3,7 +3,7 @@
 body {
     font-family: "Poppins", "sans-serif";
     letter-spacing: 0.4px;
-    background-color: theme.$page-background-colour;
+    background-color: theme.$page-background;
 }
 
 h1,
